--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <script type="text/javascript">
             preguntar();
             clientId = 'client_id_' + Math.floor((Math.random() * 1000000) + 1);
-            client = new Paho.MQTT.Client("ioticos.org", 8094, clientId);
+            client = new Paho.MQTT.Client("broker.hivemq.com", 8000, clientId);
             
             client.onConnectionLost = onConnectionLost;
             client.onMessageArrived = onMessageArrived;
@@ -37,7 +37,7 @@
             {
                 console.log("Conexion exitosa!!!");
                 $("#status").html("Conexion Establecida");
-                client.subscribe("qTBHZWSSPeNSz5n");
+                client.subscribe("JorgeSandoval/web");
             }
 
             function onMessageArrived(message) 
@@ -66,7 +66,7 @@
             {
                 console.log(value);
                     message = new Paho.MQTT.Message(value);
-                    message.destinationName = "qTBHZWSSPeNSz5n/in";
+                    message.destinationName = "Jorge/boton";
                     client.send(message);
                     notify("Acabas de abrir");
             }
